{
    "name": "GameInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "30e9ba63-c2f5-450a-a673-d2e2bcd048a3",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "5f29f974-4f15-458d-a3a9-8d7be14f1ce8",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "823b449b-4136-4416-b699-f4d641c048c6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "fd0a837e-014f-4913-a39c-68d7d59f5f5a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShowOverlay",
                    "type": "Button",
                    "id": "95c65ef5-ab4b-42c8-87c8-6f24b239d695",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShowCommands",
                    "type": "Button",
                    "id": "f3d433c4-38b3-4730-9236-021f50f1eed2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AudioEnabler",
                    "type": "Button",
                    "id": "38a79d22-76f4-4978-81f4-dfdb571ca56f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "866ec03c-f79a-4935-a5b7-279ebb6dfd52",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reset",
                    "type": "Button",
                    "id": "4722c5d4-1b2f-461e-9350-19ee02c13c5b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SightSeeing",
                    "type": "Button",
                    "id": "8b5c0063-84fb-4052-98c5-5c5b63b277a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GoBackHome",
                    "type": "Button",
                    "id": "d14e7858-4c14-43ca-841d-867a319be4f6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateCamera",
                    "type": "Value",
                    "id": "2e16b644-7550-4037-81c8-a4a726293683",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ItemRotation",
                    "type": "Button",
                    "id": "b59beaf9-f5b3-4f53-98e3-ef3689aa4143",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Gamepad Left Stick",
                    "id": "68ca5664-4add-40fc-9fa0-708634c03f34",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0ebe15d6-f02e-4de6-906c-0306d4059f6b",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d4570a29-13cd-460b-9fc0-2a154e42d9e9",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "bc17f692-aa89-4142-9ca9-3b79106d7b6a",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1085f276-076c-4c57-8a93-c63f88ca084d",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard WASD",
                    "id": "934d5f06-b905-4ea0-a043-44899ec9259a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "ScaleVector2(x=0.6,y=0.6)",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2198ba53-e487-439e-89a7-c21a6b63afc8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4a374740-b464-4c6a-a08d-fdb4a97055f3",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1f464440-0149-40a4-83dd-03acc40710fc",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3b0b279a-f706-4ec6-8734-ffd2a68524eb",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard Arrows",
                    "id": "10f36150-a4cf-477e-a438-7e02ae8ba614",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "ScaleVector2(x=0.6,y=0.6)",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "97132bd3-b202-4cca-804b-95c089170602",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "be276a4e-cd0f-45df-9057-0b581acf93a5",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d5b4ee19-e4a5-47c7-a275-b057ef60da31",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "120462cf-211e-4e52-bf9b-0ef3562eaca5",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b97467a0-a262-4f59-8386-2fa85634b907",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0704394-43e7-4c7a-a3ad-6d44ae3aee84",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0631b4f9-4119-4a61-9619-c0acb03c85b9",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f4156d5-ae50-41a7-8ae5-ed7f4f8a5500",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8c5de0d3-95be-4d8c-bbcf-cb1648e320ff",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "ShowOverlay",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "987b3024-05a3-4792-856f-529e26bad828",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "ShowOverlay",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "afd34116-7c3a-4a4e-b0cc-e4c5416c3c12",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61daa4f7-586b-4efd-ac2c-b27b774cd0d5",
                    "path": "<Keyboard>/rightShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "ResetComboGamepad",
                    "id": "f1b7bb9a-ef36-4be4-810c-11af906f3d03",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reset",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "a34791cc-31e5-401a-97a2-c968137764b5",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "Reset",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "button",
                    "id": "6708a6f5-31b1-40df-8d81-50651cf5945d",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "Reset",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ResetComboKeyboard",
                    "id": "c6f4a251-307b-43ae-8732-10157d5214c5",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reset",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "61bc5fe2-009a-46cf-bea0-8d4e64221630",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "Reset",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "button",
                    "id": "0d6cefda-e68c-4667-b9f3-db7356f5ceba",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "Reset",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "SightSeeingKeyboard",
                    "id": "5ecf07d5-3b61-4f17-bc1d-4d10d970b36a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SightSeeing",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "061bff7c-3201-4489-9c8d-00a4cbaf2e44",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "SightSeeing",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "f335d020-ea2d-45fb-b53a-69133bd82b9a",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "SightSeeing",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "SightSeeingGamepad",
                    "id": "d1104112-b1fa-4777-8d93-036ca648631b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "SightSeeing",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "8a67aa74-413f-4f32-a6f9-b2424b02683b",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "SightSeeing",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "bc1eb2cd-f5de-43d5-9fca-3fc88669e4c7",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "SightSeeing",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "92166bb8-a3b7-4bee-b0db-b3ba2fd9ec18",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "GoBackHome",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92d96a9b-660f-4202-aafa-24380d057e9d",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "GoBackHome",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb88985c-6a3f-4446-b9fa-1baa36f8d4c1",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "ShowCommands",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c9e2664-d535-4576-ab13-bb49361eb775",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "ShowCommands",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24c44e27-fcb3-4498-9818-4177d57e0e82",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "AudioEnabler",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a35cf49c-2a77-4d45-a151-5ee9fefd1bb3",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "AudioEnabler",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "493c298d-a432-4b17-bf98-7d66488b0c56",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "RotateCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "994f0890-a246-4802-8d06-6ddca36404d0",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "StickDeadzone,ScaleVector2(x=25,y=25)",
                    "groups": "KeyboardOrGamepad",
                    "action": "RotateCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d3bc868-4f7c-44c6-874d-5eed5b1c441b",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "ItemRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42129693-329e-49a9-9622-e4b0daea15c2",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "ItemRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3f0d5a6-7700-48fd-92aa-b57712bc2462",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardOrGamepad",
                    "action": "ItemRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardOrGamepad",
            "bindingGroup": "KeyboardOrGamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": true,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}